--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember test"
   },
   "repository": "travelbank/ember-flickity",
   "bugs": "travelbank/ember-flickity/issues",
   "engines": {
-    "node": ">= 6.11"
+    "node": "~4.5 || 6.* || >= 7.*",
+    "yarn": ">= 1.0.0"
   },
   "author": "Dylan Foster <dylan947@gmail.com>",
   "contributors": [
@@ -29,41 +30,36 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.6.2",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-chai": "0.3.2",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "1.7.0",
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-import-polyfill": "^0.2.0",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-mocha": "0.13.1",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.6.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
-    "eslint-config-unstandard": "^1.4.0",
-    "loader.js": "^4.0.1"
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-cli": "^3.6.0",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-eslint": "^5.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^2.0.0",
+    "ember-source": "^3.6.1",
+    "eslint": "~4.18.2",
+    "eslint-config-unstandard": "^1.4.2",
+    "eslint-plugin-ember": "~5.0.3",
+    "eslint-plugin-import": "~2.9.0",
+    "eslint-plugin-node": "~6.0.1",
+    "fastboot-transform": "^0.1.3",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.6.2"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.11",
+    "ember-cli-babel": "^7.2.0",
+    "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-node-assets": "^0.2.2",
-    "fastboot-transform": "^0.1.2",
-    "flickity": "^2.0.9"
-  },
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "flickity": "^2.1.2"
   }
 }
