--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-flickity",
-  "version": "0.1.6",
+  "version": "0.2.1",
   "description": "An ember addon for flickity.",
   "keywords": [
     "ember-addon"
@@ -29,20 +29,21 @@
   },
   "scripts": {
     "build": "ember build",
+    "changelog": "conventional-changelog -s -p angular -i CHANGELOG.md",
     "lint:js": "eslint .",
+    "prepare-release": "curl -sL https://raw.githubusercontent.com/travelbank/misc/master/scripts/prepare_release.sh | bash -s",
     "start": "ember serve",
     "test": "ember test",
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-sass": "^8.0.1",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-htmlbars": "^2.0.1",
-    "flickity": "^2.0.9",
-    "sass": "^1.15.2"
+    "flickity": "^2.0.9"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.7.0",
+    "conventional-changelog-cli": "^2.0.11",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
     "ember-cli-dependency-checker": "^2.0.0",
